--- a/src/app/components/wishlist/wishlist.component.html
+++ b/src/app/components/wishlist/wishlist.component.html
@@ -1,3 +1,22 @@
-<div>
-  Wishlist
+<div class="container">
+  <div class="card spaced-card">
+    <div class="card-header">
+      <h3>General Items</h3>
+    </div>
+    <div class="card-body">
+      <div class="card-text">
+        <ul>
+          <li *ngFor="let item of wishlist.generalItems">
+            <div>{{item.name}}<span *ngIf="item.blurb">: {{item.blurb}}</span></div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <app-wishlist-item *ngFor="let item of wishlist.specificItems"
+                     [itemBlurb]="item.blurb"
+                     [itemLink]="item.link"
+                     [itemName]="item.name"
+                     [itemImage]="item.image"
+                     [itemPrice]="item.price"></app-wishlist-item>
 </div>
