Added project content.

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,8 +16,16 @@ body {
   background-color: #212121;
 }
 
+.inner-card {
+  background-color: #616161;
+}
+
 .spaced-card {
   margin-bottom: 2rem;
+}
+
+.spaced-collapse {
+  margin-top: 2rem;
 }
 
 .v-spacer {
