--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,3 +1,4 @@
 <div class="container">
   <h1>Projects</h1>
+  <app-project-item *ngFor="let project of projects" [project]="project"></app-project-item>
 </div>
