Added quick music section. Renamed bio to content-header and made it more re-usable.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Homepage</h1>
-  <app-bio></app-bio>
+  <app-content-header [contentHeading]="contentHeading"></app-content-header>
   <div class="w-100 v-spacer"></div>
   <div class="row">
     <div class="col-xs-8 col-md-8">
@@ -11,5 +11,3 @@
     </div>
   </div>
 </div>
-
-
