--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+/* You can add global-components styles to this file, and also import other style files */
 .bg-dark {
   background-color: #212121 !important;
 }
