Switched positioning of "Currently Reading" and "Profficient Technologies" sections.
Switched order of a few tools-and-tech items.

Added details about current employment. Removed redundant blurb about using react/angular in the "about me" description.

--- a/src/modules/home/components/book/book.component.html
+++ b/src/modules/home/components/book/book.component.html
@@ -1,4 +1,4 @@
-<div class="card spaced-card">
+<div  *ngIf="books && books.length > 0" class="card spaced-card">
   <div class="card-body">
     <div class="card-title">
       <h4>Currently Reading</h4>
